--- a/Rx.NET/Source/src/System.Reactive/Linq/Observable/Zip.Generated.tt
+++ b/Rx.NET/Source/src/System.Reactive/Linq/Observable/Zip.Generated.tt
@@ -76,15 +76,14 @@ for (var j = 1; j <= i; j++)
 
             public void Run(<#=os#>)
             {
-                var disposables = new IDisposable[<#=i + 1#>];
+                var disposables = new IDisposable[<#=i#>];
 
 <#
 for (var j = 1; j <= i; j++)
 {
 #>
-                var d<#=j#> = new SingleAssignmentDisposable();
-                disposables[<#=j - 1#>] = d<#=j#>;
-                _observer<#=j#> = new ZipObserver<T<#=j#>>(_gate, this, <#=j - 1#>, d<#=j#>);
+                _observer<#=j#> = new ZipObserver<T<#=j#>>(_gate, this, <#=j - 1#>);
+                disposables[<#=j - 1#>] = _observer<#=j#>;
                 base.Queues[<#= j - 1#>] = _observer<#=j#>.Values;
 
 <#
@@ -93,22 +92,10 @@ for (var j = 1; j <= i; j++)
 for (var j = 1; j <= i; j++)
 {
 #>
-                d<#=j#>.Disposable = source<#=j#>.SubscribeSafe(_observer<#=j#>);
+                _observer<#=j#>.SetResource(source<#=j#>.SubscribeSafe(_observer<#=j#>));
 <#
 }
 #>
-
-                disposables[<#=i#>] = Disposable.Create(() =>
-                {
-<#
-for (var j = 1; j <= i; j++)
-{
-#>
-                    _observer<#=j#>.Values.Clear();
-<#
-}
-#>
-                });
 
                 SetUpstream(StableCompositeDisposable.Create(disposables));
             }
