--- a/Ix.NET/Source/System.Linq.Async.Queryable.Tests/AsyncQueryableTests.Generated.tt
+++ b/Ix.NET/Source/System.Linq.Async.Queryable.Tests/AsyncQueryableTests.Generated.tt
@@ -14,6 +14,7 @@
 <#@ import namespace="System.Collections.Generic" #>
 <#@ output extension=".cs" #>
 <#
+var nullableParameterNames = new[] { "comparer" };
 var failing = new[] { "TakeLast" };
 var exclude = new[] { "ForEach", "ForEachAsync", "ToEnumerable", "ToAsyncEnumerable", "ToObservable", "AsAsyncEnumerable", "WithCancellation" };
 
@@ -268,7 +269,7 @@ var indexes = new List<int>();
 var j = 0;
 foreach (var p in m.GetParameters())
 {
-    if (!p.ParameterType.IsValueType && !p.ParameterType.IsGenericParameter)
+    if (!p.ParameterType.IsValueType && !p.ParameterType.IsGenericParameter && !nullableParameterNames.Contains(p.Name))
     {
         indexes.Add(j);
     }
