--- a/Ix.NET/Source/System.Linq.Async.Queryable/System/Linq/AsyncQueryable.Generated.tt
+++ b/Ix.NET/Source/System.Linq.Async.Queryable/System/Linq/AsyncQueryable.Generated.tt
@@ -14,6 +14,7 @@
 <#@ import namespace="System.Collections.Generic" #>
 <#@ output extension=".cs" #>
 <#
+var nullableParameterNames = new[] { "comparer" };
 var exclude = new[] { "ForEach", "ForEachAsync", "ToEnumerable", "ToAsyncEnumerable", "ToObservable", "AsAsyncEnumerable", "WithCancellation" };
 
 var toQuotedImpl = default(Func<Type, int, bool, string>);
@@ -253,7 +254,7 @@ foreach (var m in typeof(AsyncEnumerable).GetMethods()
 var any = false;
 foreach (var p in m.GetParameters())
 {
-    if (!p.ParameterType.IsValueType && !p.ParameterType.IsGenericParameter)
+    if (!p.ParameterType.IsValueType && !p.ParameterType.IsGenericParameter && !nullableParameterNames.Contains(p.Name))
     {
         any = true;
 #>
