--- a/Ix.NET/Source/System.Linq.Async/System/Linq/Operators/Sum.Generated.tt
+++ b/Ix.NET/Source/System.Linq.Async/System/Linq/Operators/Sum.Generated.tt
@@ -34,6 +34,7 @@ var os = new[]
 foreach (var o in os)
 {
     var n = o.type.EndsWith("?") ? ".GetValueOrDefault()" : "";
+    var nonNullType = o.type.EndsWith("?") ? o.type.TrimEnd('?') : o.type;
 #>
         public static Task<<#=o.type#>> SumAsync(this IAsyncEnumerable<<#=o.type#>> source)
         {
@@ -105,9 +106,9 @@ foreach (var o in os)
 
         private static async Task<<#=o.type#>> SumCore(IAsyncEnumerable<<#=o.type#>> source, CancellationToken cancellationToken)
         {
-            var sum = <#=o.zero#>;
+            <#=nonNullType#> sum = <#=o.zero#>;
 
-            var e = source.GetAsyncEnumerator(cancellationToken);
+            IAsyncEnumerator<<#=o.type#>> e = source.GetAsyncEnumerator(cancellationToken);
 
             try
             {
@@ -142,15 +143,15 @@ else
 
         private static async Task<<#=o.type#>> SumCore<TSource>(IAsyncEnumerable<TSource> source, Func<TSource, <#=o.type#>> selector, CancellationToken cancellationToken)
         {
-            var sum = <#=o.zero#>;
+            <#=nonNullType#> sum = <#=o.zero#>;
 
-            var e = source.GetAsyncEnumerator(cancellationToken);
+            IAsyncEnumerator<TSource> e = source.GetAsyncEnumerator(cancellationToken);
 
             try
             {
                 while (await e.MoveNextAsync().ConfigureAwait(false))
                 {
-                    var value = selector(e.Current);
+                    <#=o.type#> value = selector(e.Current);
 
 <#
 if (o.@checked)
@@ -181,15 +182,15 @@ else
 
         private static async Task<<#=o.type#>> SumCore<TSource>(IAsyncEnumerable<TSource> source, Func<TSource, ValueTask<<#=o.type#>>> selector, CancellationToken cancellationToken)
         {
-            var sum = <#=o.zero#>;
+            <#=nonNullType#> sum = <#=o.zero#>;
 
-            var e = source.GetAsyncEnumerator(cancellationToken);
+            IAsyncEnumerator<TSource> e = source.GetAsyncEnumerator(cancellationToken);
 
             try
             {
                 while (await e.MoveNextAsync().ConfigureAwait(false))
                 {
-                    var value = await selector(e.Current).ConfigureAwait(false);
+                    <#=o.type#> value = await selector(e.Current).ConfigureAwait(false);
 
 <#
 if (o.@checked)
@@ -221,15 +222,15 @@ else
 #if !NO_DEEP_CANCELLATION
         private static async Task<<#=o.type#>> SumCore<TSource>(IAsyncEnumerable<TSource> source, Func<TSource, CancellationToken, ValueTask<<#=o.type#>>> selector, CancellationToken cancellationToken)
         {
-            var sum = <#=o.zero#>;
+            <#=nonNullType#> sum = <#=o.zero#>;
 
-            var e = source.GetAsyncEnumerator(cancellationToken);
+            IAsyncEnumerator<TSource> e = source.GetAsyncEnumerator(cancellationToken);
 
             try
             {
                 while (await e.MoveNextAsync().ConfigureAwait(false))
                 {
-                    var value = await selector(e.Current, cancellationToken).ConfigureAwait(false);
+                    <#=o.type#> value = await selector(e.Current, cancellationToken).ConfigureAwait(false);
 
 <#
 if (o.@checked)
